# skotch

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  milestones.yaml  plan-dist-manifest.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/skot-backend-dex/: Cargo.toml
crates/skot-backend-dex/src/: bytecode.rs  leb128.rs  lib.rs  writer.rs
crates/skot-backend-jvm/: Cargo.toml
crates/skot-backend-jvm/src/: class_writer.rs  lib.rs
crates/skot-backend-klib/: Cargo.toml
crates/skot-backend-klib/src/: lib.rs
crates/skot-backend-llvm/: Cargo.toml
crates/skot-backend-llvm/src/: lib.rs
crates/skot-backend-wasm/: Cargo.toml
crates/skot-classfile-norm/: Cargo.toml
crates/skot-cli/: Cargo.toml
crates/skot-cli/src/: main.rs
crates/skot-cli/tests/: no_external_compiler.rs
crates/skot-config/: Cargo.toml
crates/skot-dex-norm/: Cargo.toml
crates/skot-diagnostics/: Cargo.toml
crates/skot-diagnostics/src/: lib.rs
crates/skot-driver/: Cargo.toml
crates/skot-driver/src/: lib.rs
crates/skot-driver/tests/: e2e_dex.rs  e2e_jvm.rs  e2e_native.rs  fixture_compare.rs  fixture_compare_dex.rs  fixture_compare_native.rs
crates/skot-hir/: Cargo.toml
crates/skot-intern/: Cargo.toml
crates/skot-lexer/: Cargo.toml
crates/skot-lexer/src/: lib.rs
crates/skot-llvm-norm/: Cargo.toml
crates/skot-mir/: Cargo.toml
crates/skot-mir-lower/: Cargo.toml
crates/skot-mir-lower/src/: lib.rs
crates/skot-mir/src/: lib.rs
crates/skot-parser/: Cargo.toml
crates/skot-parser/src/: lib.rs
crates/skot-resolve/: Cargo.toml
crates/skot-resolve/src/: lib.rs
crates/skot-span/: Cargo.toml
crates/skot-syntax/: Cargo.toml
crates/skot-typeck/: Cargo.toml
crates/skot-typeck/src/: lib.rs
crates/skot-types/: Cargo.toml
crates/skotch-aapt2/: Cargo.toml
crates/skotch-aapt2/src/: apk.rs  cli.rs  container.rs  convert.rs  diag.rs  lib.rs  optimize.rs  util.rs
crates/skotch-aapt2/src/binary/: arsc_flattener.rs  arsc_parser.rs  mod.rs
crates/skotch-aapt2/src/compile/: inline_xml.rs  mod.rs  ninepatch.rs  png.rs  pseudolocale.rs  values_parser.rs
crates/skotch-aapt2/src/dump/: badger.txt  chunks.rs  diff.rs  manifest.rs  mod.rs  printer.rs  table_printer.rs  values.rs  xmltree.rs
crates/skotch-aapt2/src/link/: apk_writer.rs  id_assigner.rs  java_gen.rs  manifest_fixer.rs  mod.rs  reference_linker.rs  symbol_table.rs  table_merger.rs  transforms.rs
crates/skotch-aapt2/src/pb/: mod.rs  wire.rs
crates/skotch-aapt2/src/res/: config.rs  mod.rs  string_pool.rs  table.rs  utils.rs  value.rs
crates/skotch-aapt2/src/xml/: axml.rs  flatten.rs  mod.rs
crates/skotch-aapt2/tests/: androidfw_corpus.rs  aosp_extra.rs  integration.rs
crates/skotch-apk/: Cargo.toml
crates/skotch-apk/src/: lib.rs
crates/skotch-apksig/: Cargo.toml
crates/skotch-apksig/src/: axml.rs  base64.rs  crypto.rs  debug.rs  der_lite.rs  derhelp.rs  digest.rs  keystore.rs  lib.rs  lineage.rs  pbe.rs  pkcs7.rs  sigblock.rs  sign.rs  v1.rs  v1verify.rs  v2.rs  v3.rs  v4.rs  verify.rs  zip.rs
crates/skotch-apksig/tests/: golden_apks.rs  verify_corpus.rs  verify_roundtrip.rs
crates/skotch-ast/: Cargo.toml  MIGRATION.md
crates/skotch-ast/src/: lib.rs  nodes.rs
crates/skotch-axml/: Cargo.toml
crates/skotch-backend-dex/: Cargo.toml
crates/skotch-backend-dex/src/: bytecode.rs  leb128.rs  lib.rs  pools.rs  writer.rs
crates/skotch-backend-jvm/: Cargo.toml
crates/skotch-backend-jvm/src/: class_writer.rs  constant_pool.rs  lib.rs  value_class.rs
crates/skotch-backend-klib/: Cargo.toml
crates/skotch-backend-klib/src/: lib.rs
crates/skotch-backend-llvm/: Cargo.toml
crates/skotch-backend-llvm/src/: lib.rs
crates/skotch-backend-wasm/: Cargo.toml
crates/skotch-backend-wasm/src/: lib.rs
crates/skotch-bsp/: Cargo.toml
crates/skotch-bsp/src/: lib.rs  transport.rs  types.rs
crates/skotch-build/: Cargo.toml
crates/skotch-build/src/: cache.rs  databinding.rs  discover.rs  lib.rs  merge.rs  pipeline.rs  r_class.rs  test_runner.rs
crates/skotch-build/tests/: gradle_compat.rs  parallel_incremental.rs
crates/skotch-buildscript/: Cargo.toml
crates/skotch-buildscript/src/: lib.rs  version_catalog.rs
crates/skotch-classfile/: Cargo.toml
crates/skotch-classfile-norm/: Cargo.toml
crates/skotch-classfile/src/: constant_pool.rs  lib.rs  model.rs  reader.rs
crates/skotch-classfile/tests/fixtures/: Calc.java  S.java
crates/skotch-classinfo/: Cargo.toml
crates/skotch-classinfo/src/: generic_signature.rs  kotlin_metadata.rs  lib.rs
crates/skotch-classinfo/tests/: metadata_extraction.rs
crates/skotch-cli/: Cargo.toml
crates/skotch-cli/src/: apksigner.rs  d8.rs  kotlinc.rs  main.rs  multicall.rs
crates/skotch-cli/src/apksigner_help/: help_lineage.txt
crates/skotch-cli/tests/: no_external_compiler.rs
crates/skotch-compose/: Cargo.toml
crates/skotch-config/: Cargo.toml
crates/skotch-d8/: Cargo.toml
crates/skotch-db/: Cargo.toml
crates/skotch-dex/: Cargo.toml
crates/skotch-dex-norm/: Cargo.toml
crates/skotch-dexcore/: Cargo.toml
crates/skotch-diagnostics/: Cargo.toml
crates/skotch-driver/: Cargo.toml
crates/skotch-hir/: Cargo.toml
crates/skotch-intern/: Cargo.toml
crates/skotch-jar/: Cargo.toml
crates/skotch-jvm/: Cargo.toml
crates/skotch-kotlin-metadata-writer/: Cargo.toml  build.rs
crates/skotch-lexer/: Cargo.toml
crates/skotch-llvm-norm/: Cargo.toml
crates/skotch-lsp/: Cargo.toml
crates/skotch-mir/: Cargo.toml
crates/skotch-mir-lower/: Cargo.toml
crates/skotch-parser/: Cargo.toml
crates/skotch-parser-core/: Cargo.toml
crates/skotch-repl/: Cargo.toml
crates/skotch-resolve/: Cargo.toml
crates/skotch-sign/: Cargo.toml
crates/skotch-sil/: Cargo.toml
crates/skotch-span/: Cargo.toml
crates/skotch-stdlib-registry/: Cargo.toml
docs/: skotch-d8-design.md
parity/: .gitignore  README.md
scripts/: cleanup_stray.sh  kotlin-psi.main.kts  parity_bench.sh  parity_summary.sh  skotch_preflight.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+11287 files in other folders)
