[workspace]
resolver = "2"
members = [
    # Layer 0 — primitives
    "crates/skotch-span",
    "crates/skotch-intern",
    "crates/skotch-config",
    "crates/skotch-diagnostics",

    # Layer 1 — front-end
    "crates/skotch-syntax",
    "crates/skotch-lexer",
    "crates/skotch-parser",

    # Layer 2 — semantic analysis
    "crates/skotch-resolve",
    "crates/skotch-types",
    "crates/skotch-typeck",

    # Layer 3 — IRs
    "crates/skotch-hir",
    "crates/skotch-mir",
    "crates/skotch-mir-lower",

    # Layer 4 — backends
    "crates/skotch-backend-jvm",
    "crates/skotch-backend-dex",
    "crates/skotch-backend-llvm",
    "crates/skotch-backend-wasm",
    "crates/skotch-backend-klib",

    # Layer 5 — normalizers (centerpiece of the validation system)
    "crates/skotch-classfile-norm",
    "crates/skotch-dex-norm",
    "crates/skotch-llvm-norm",

    # Layer 6 — packaging + build file parsing
    "crates/skotch-jar",
    "crates/skotch-axml",
    "crates/skotch-apk",
    "crates/skotch-sign",
    "crates/skotch-classinfo",
    "crates/skotch-buildscript",
    "crates/skotch-tape",

    # Layer 7 — incremental compilation database
    "crates/skotch-db",

    # Layer 8 — build orchestration + driver + CLI + LSP
    "crates/skotch-build",
    "crates/skotch-driver",
    "crates/skotch-cli",
    "crates/skotch-repl",
    "crates/skotch-jvm",
    "crates/skotch-lsp",

    # Fixture generation tooling (cargo-xtask pattern)
    "xtask",
]

[workspace.package]
edition      = "2021"
rust-version = "1.85"
license      = "Apache-2.0"
version      = "0.13.0"
repository   = "https://github.com/skotlang/skotch"

[workspace.dependencies]
# foundational
rustc-hash   = "2"
lasso        = { version = "0.7", features = ["inline-more"] }

# diagnostics
ariadne      = "0.6"
thiserror    = "2"
anyhow       = "1"

# binary IO
byteorder    = "1"

# APK signing (PR D): SHA-256 digests, RSA/ECDSA signing, keystore reading.
sha2         = { version = "0.10", features = ["oid"] }
rsa          = "0.9"
pkcs8        = { version = "0.10", features = ["pem"] }
x509-cert    = "0.2"
der          = { version = "0.7", features = ["pem"] }
p256         = { version = "0.13", features = ["ecdsa"] }
pkcs12       = "0.1"
signature_crate = { package = "signature", version = "2" }

# DEX backend (PR #3): Adler32 checksum + SHA-1 signature for the
# DEX header. Both crates are tiny and dependency-free.
adler        = "1.0"
sha1_smol    = "1.0"

# Native backend (PR #4): zip for klib packaging, serde + serde_json
# for round-tripping MIR through the multi-stage Kotlin Native-style
# pipeline (kt → MIR → klib → LLVM IR → clang → native).
zip          = { version = "4", default-features = false, features = ["deflate"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# CLI
clap         = { version = "4", features = ["derive"] }

# tests
insta        = { version = "1.47", features = ["yaml"] }
similar      = "2"
which        = "8"

# JVM embedding (JNI Invocation API)
jni          = { version = "0.21", features = ["invocation"] }
libloading   = "0.8"

# REPL line editing
reedline     = "0.46"
nu-ansi-term = "0.50"

# LSP
tower-lsp    = "0.20"
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
dashmap      = "6"

# XDG-compliant directories
directories  = "6"

# Maven dependency resolution (skotch-tape)
reqwest      = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
roxmltree    = "0.20"
indicatif    = "0.17"

# incremental computation + parallelism
salsa        = "0.26"
rayon        = "1.12"
blake3       = "1"

# xtask
walkdir      = "2"

# internal aliases
skotch-span            = { path = "crates/skotch-span" }
skotch-intern          = { path = "crates/skotch-intern" }
skotch-config          = { path = "crates/skotch-config" }
skotch-diagnostics     = { path = "crates/skotch-diagnostics" }
skotch-syntax          = { path = "crates/skotch-syntax" }
skotch-lexer           = { path = "crates/skotch-lexer" }
skotch-parser          = { path = "crates/skotch-parser" }
skotch-resolve         = { path = "crates/skotch-resolve" }
skotch-types           = { path = "crates/skotch-types" }
skotch-typeck          = { path = "crates/skotch-typeck" }
skotch-hir             = { path = "crates/skotch-hir" }
skotch-mir             = { path = "crates/skotch-mir" }
skotch-mir-lower       = { path = "crates/skotch-mir-lower" }
skotch-backend-jvm     = { path = "crates/skotch-backend-jvm" }
skotch-backend-dex     = { path = "crates/skotch-backend-dex" }
skotch-backend-llvm    = { path = "crates/skotch-backend-llvm" }
skotch-backend-wasm    = { path = "crates/skotch-backend-wasm" }
skotch-backend-klib    = { path = "crates/skotch-backend-klib" }
skotch-classfile-norm  = { path = "crates/skotch-classfile-norm" }
skotch-dex-norm        = { path = "crates/skotch-dex-norm" }
skotch-llvm-norm       = { path = "crates/skotch-llvm-norm" }
skotch-classinfo       = { path = "crates/skotch-classinfo" }
skotch-jar             = { path = "crates/skotch-jar" }
skotch-axml            = { path = "crates/skotch-axml" }
skotch-apk             = { path = "crates/skotch-apk" }
skotch-sign            = { path = "crates/skotch-sign" }
skotch-buildscript     = { path = "crates/skotch-buildscript" }
skotch-tape            = { path = "crates/skotch-tape" }
skotch-db              = { path = "crates/skotch-db" }
skotch-build           = { path = "crates/skotch-build" }
skotch-driver          = { path = "crates/skotch-driver" }
skotch-repl            = { path = "crates/skotch-repl" }
skotch-jvm             = { path = "crates/skotch-jvm" }
skotch-lsp             = { path = "crates/skotch-lsp" }

[profile.dev]
debug            = "line-tables-only"
incremental      = true
opt-level        = 0

[profile.release]
lto           = "thin"
codegen-units = 16
debug         = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

