[package]
name        = "skot-backend-klib"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "skot Kotlin Library (.klib) writer and reader — the multi-stage pipeline waist between MIR and the LLVM backend"

[dependencies]
skot-mir   = { workspace = true }
skot-types = { workspace = true }
zip        = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }

[dev-dependencies]
skot-intern    = { workspace = true }
skot-lexer     = { workspace = true }
skot-parser    = { workspace = true }
skot-resolve   = { workspace = true }
skot-typeck    = { workspace = true }
skot-mir-lower = { workspace = true }
skot-syntax    = { workspace = true }
skot-span      = { workspace = true }
skot-diagnostics = { workspace = true }
