[package]
name        = "skot-backend-llvm"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "LLVM textual IR emitter for skot, consuming a skot .klib"

[dependencies]
skot-mir          = { workspace = true }
skot-types        = { workspace = true }
skot-backend-klib = { workspace = true }
anyhow            = { workspace = true }

[dev-dependencies]
skot-intern    = { workspace = true }
skot-lexer     = { workspace = true }
skot-parser    = { workspace = true }
skot-resolve   = { workspace = true }
skot-typeck    = { workspace = true }
skot-mir-lower = { workspace = true }
skot-syntax    = { workspace = true }
skot-span      = { workspace = true }
skot-diagnostics = { workspace = true }
