[package]
name        = "skot-diagnostics"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Diagnostic types and ariadne renderer wrapper for skot"

[dependencies]
skot-span = { workspace = true }
ariadne   = { workspace = true }
thiserror = { workspace = true }
