[package]
name        = "skot-driver"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Library entry points for skot's CLI subcommands"

[dependencies]
skot-span           = { workspace = true }
skot-intern         = { workspace = true }
skot-syntax         = { workspace = true }
skot-lexer          = { workspace = true }
skot-parser         = { workspace = true }
skot-resolve        = { workspace = true }
skot-typeck         = { workspace = true }
skot-mir            = { workspace = true }
skot-mir-lower      = { workspace = true }
skot-backend-jvm    = { workspace = true }
skot-backend-dex    = { workspace = true }
skot-backend-llvm   = { workspace = true }
skot-backend-klib   = { workspace = true }
skot-classfile-norm = { workspace = true }
skot-dex-norm       = { workspace = true }
skot-llvm-norm      = { workspace = true }
skot-diagnostics    = { workspace = true }
anyhow              = { workspace = true }
which               = { workspace = true }
serde_json          = { workspace = true }

[dev-dependencies]
similar           = { workspace = true }
which             = { workspace = true }
skot-dex-norm     = { workspace = true }
skot-llvm-norm    = { workspace = true }
skot-backend-klib = { workspace = true }
skot-backend-llvm = { workspace = true }
