[package]
name        = "skot-lexer"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Hand-rolled lexer for Kotlin 2 source"

[dependencies]
skot-span        = { workspace = true }
skot-intern      = { workspace = true }
skot-syntax      = { workspace = true }
skot-diagnostics = { workspace = true }
