[package]
name        = "skot-mir-lower"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "AST + ResolvedFile + TypedFile → MIR lowering for skot"

[dependencies]
skot-span        = { workspace = true }
skot-intern      = { workspace = true }
skot-syntax      = { workspace = true }
skot-types       = { workspace = true }
skot-resolve     = { workspace = true }
skot-typeck      = { workspace = true }
skot-mir         = { workspace = true }
skot-diagnostics = { workspace = true }
rustc-hash       = { workspace = true }

[dev-dependencies]
skot-lexer  = { workspace = true }
skot-parser = { workspace = true }
