[package]
name        = "skot-resolve"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Name resolution for Kotlin source"

[dependencies]
skot-span        = { workspace = true }
skot-intern      = { workspace = true }
skot-syntax      = { workspace = true }
skot-diagnostics = { workspace = true }
rustc-hash       = { workspace = true }

[dev-dependencies]
skot-lexer  = { workspace = true }
skot-parser = { workspace = true }
