[package]
name        = "skot-typeck"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Type checker for the Kotlin subset skot accepts"

[dependencies]
skot-span        = { workspace = true }
skot-intern      = { workspace = true }
skot-syntax      = { workspace = true }
skot-types       = { workspace = true }
skot-resolve     = { workspace = true }
skot-diagnostics = { workspace = true }
rustc-hash       = { workspace = true }

[dev-dependencies]
skot-lexer  = { workspace = true }
skot-parser = { workspace = true }
