[package]
name         = "skotch-classinfo"
description  = "Minimal .class file parser for extracting method/field signatures"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
version.workspace      = true

[dependencies]
zip   = { workspace = true }
which = { workspace = true }
