[package]
name        = "skotch-cli"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Command-line interface for skotch — produces the `skotch` binary"

[[bin]]
name = "skotch"
path = "src/main.rs"

[dependencies]
skotch-driver = { workspace = true }
skotch-build  = { workspace = true }
skotch-repl   = { workspace = true }
clap          = { workspace = true }
anyhow        = { workspace = true }
