[package]
name        = "skotch-cli"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Command-line interface for skotch — produces the `skotch` binary"

[[bin]]
name = "skotch"
path = "src/main.rs"

[dependencies]
skotch-driver       = { workspace = true }
skotch-build        = { workspace = true }
skotch-repl         = { workspace = true }
skotch-lsp          = { workspace = true }
skotch-bsp          = { workspace = true }
# Used by the `kotlinc` subcommand for multi-file front-end + JVM emit.
skotch-intern       = { workspace = true }
skotch-diagnostics  = { workspace = true }
skotch-span         = { workspace = true }
skotch-syntax       = { workspace = true }
skotch-lexer        = { workspace = true }
skotch-parser       = { workspace = true }
skotch-resolve      = { workspace = true }
skotch-backend-jvm  = { workspace = true }
skotch-compose      = { workspace = true }
skotch-mir-lower    = { workspace = true }
clap                = { workspace = true }
anyhow              = { workspace = true }
tokio               = { workspace = true }
